# unicomm-desktop

./: README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: device.rs  mod.rs  user.rs
src/assets/fonts/: README.md
src/components/layout/: AppLayout.tsx  AppTitlebar.tsx  index.ts
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  index.ts  input.tsx  popover.tsx  remote-multi-select.tsx  select.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/core/http/: client.ts  index.ts
src/core/http/errors/: ApiError.ts  AppError.ts  AuthError.ts  NetworkError.ts
src/core/query/: queryClient.ts
src/desktop/device/: DeviceService.ts
src/desktop/notification/: index.ts  notificationManager.ts
src/desktop/shortcut/: shortcutManager.ts
src/desktop/tray/: index.ts  trayManager.ts
src/desktop/user/: getCurrentWindowsUser.ts  index.ts
src/desktop/window/: index.ts  windowManager.ts
src/hooks/: useDocumentShortcut.ts
src/i18n/: index.ts  useI18n.ts
src/native/api/: invoke.ts  tauri.ts
src/native/bridge/: index.ts
src/services/: cache.ts  index.ts  realtime.ts  request.ts  sessionStorageService.ts  storage.ts  updaterService.ts
src/stores/: auth.store.ts  settingStore.ts  settings.store.ts  socket.store.ts
src/styles/: globals.css  themeManager.ts
(+35 files in other folders)
