[package]
name = "unicomm-desktop"
version = "0.1.0"
description = "UniComm Desktop Application"
authors = ["UniComm Team"]
edition = "2021"

[lib]
name = "unicomm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1"
tauri-plugin-notification = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
